--- a/test/dune
+++ b/test/dune
@@ -1,5 +1,5 @@
 (tests
- (names test_all_your_bases)
+ (names test_anagram)
  ; (names test_sandpit2 test_xo test_phone_number)
  (libraries sandpit2 core base ounit2 qcheck)
 
